# radxa-welcome

./: .gitignore  Makefile  README.md  crowdin.yml  launch.py  meson.build  radxa-welcome  welcome  welcome.py  welcome_support.py
.github/workflows/: new_version.yml  release.yml
data/: com.radxa.welcome.appdata.xml.in  com.radxa.welcome.desktop.in  com.radxa.welcome.gresource.xml  meson.build
data/assets/: meson.build
data/icons/: meson.build
data/settings/: settings.json
data/ui/: apps_page.ui  links_page.ui  main.css  none.ui  preferences.ui  ui2.ui  welcome.cmb  welcome.cmb2  window.cmb.ui  window.ui
debian/: .gitignore  changelog  control  copyright  rules
debian/radxa-welcome/DEBIAN/: control  md5sums
debian/radxa-welcome/usr/share/applications/: com.radxa.welcome.desktop
debian/radxa-welcome/usr/share/glib-2.0/schemas/: com.radxa.welcome.gschema.xml
debian/radxa-welcome/usr/share/lintian/overrides/: radxa-welcome
debian/radxa-welcome/usr/share/metainfo/: com.radxa.welcome.appdata.xml
debian/radxa-welcome/usr/share/welcome/: launch.py  welcome.py  welcome_support.py
debian/source/: lintian-overrides
po/: POTFILES  meson.build  radxa-welcome.pot  welcome.pot  zh_CN.po
