
install_data('wechat-qr-light.svg',
    install_dir: join_paths(get_option('datadir'), 'radxa-welcome/data/assets/')
)
install_data('wechat-qr-dark.svg',
    install_dir: join_paths(get_option('datadir'), 'radxa-welcome/data/assets/')
)
install_data('wechat-icon.svg',
    install_dir: join_paths(get_option('datadir'), 'radxa-welcome/data/assets/')
)
install_data('discord-icon.svg',
    install_dir: join_paths(get_option('datadir'), 'radxa-welcome/data/assets/')
)

#qq_qr and qq_icon
#install_data('qq-qr-light.svg',
#    install_dir: join_paths(get_option('datadir'), 'data/assets/')
#)
install_data('qq-qr-dark.svg',
    install_dir: join_paths(get_option('datadir'), 'radxa-welcome/data/assets/')
)
install_data('qq-icon.svg',
    install_dir: join_paths(get_option('datadir'), 'radxa-welcome/data/assets/')
)